--- a/src/config/db.properties
+++ b/src/config/db.properties
@@ -1,4 +1,4 @@
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:oracle
-jdbc.username=scott
-jdbc.password=tiger
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc\:mysql\://localhost\:3306/world
+jdbc.username=gvliew
+jdbc.password=a123@456l
